# mcp-project

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: mcp_servers.json  settings.yaml
docs/: architecture.md  setup.md
scripts/: index_codebase.sh  run_client.sh  run_server.sh
src/client/: __init__.py  claude_agent.py  config.py  main.py  orchestrator.py  tracing.py
src/scripts/: index_codebase.py
src/server/: __init__.py  config.py  main.py
src/server/github/: __init__.py  client.py  tools.py
src/server/rag/: __init__.py  chunker.py  embedder.py  indexer.py  searcher.py  tools.py
src/shared/: __init__.py  logging.py  models.py
tests/: conftest.py
tests/unit/: test_models.py  test_rag.py  test_tracing.py
